<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/txt_logintitle"
        android:text="@string/laboratorio_7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputfield"
        style="@style/titulo"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        app:layout_constraintTop_toBottomOf="@id/txt_logintitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_register"
        android:layout_marginHorizontal="@dimen/margin"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputMail" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/txt_register"
        android:textColor="@color/celeste"
        android:text="@string/nuevo_usuario"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginHorizontal="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/inputfield"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="@dimen/marginTop"
        android:backgroundTint="@color/naranja"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_register" />

</androidx.constraintlayout.widget.ConstraintLayout>