<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewAccountFragment">

    <TextView
        android:id="@+id/register_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/titulo"
        android:text="@string/nueva_cuenta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginTopTitle"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        android:layout_marginHorizontal="@dimen/margin"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputfieldRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputMail" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginVertical="@dimen/marginSmol"
        android:backgroundTint="@color/naranja"
        android:text="@string/crearCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputfield" />

</androidx.constraintlayout.widget.ConstraintLayout>