<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/txt_miPerfil"
        android:text="@string/miPerfil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/marginTopTitle"
        style="@style/titulo"
        />

    <ImageButton
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_circle_24"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:scaleX="2"
        android:scaleY="2"
        android:padding="@dimen/btnPadding"
        app:layout_constraintTop_toBottomOf="@id/txt_miPerfil"
        android:layout_marginTop="@dimen/marginTopTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopTitle"
        app:layout_constraintTop_toBottomOf="@id/btnCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputfieldProfile"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:layout_width="match_parent"
            android:drawablePadding="@dimen/marginSmol"
            android:layout_height="wrap_content"
            android:hint="@string/inputMail" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnActualizarProfile"
        android:layout_width="0dp"
        android:layout_height="@dimen/btnHeight"
        android:backgroundTint="@color/naranja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginBottom="@dimen/marginTop"
        android:textAllCaps="false"
        android:text="@string/actualizar"/>


</androidx.constraintlayout.widget.ConstraintLayout>